--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "bootstrap": "^5.2.3",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-select": "^5.7.0",
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.0"
   }
 }
