--- a/package.json
+++ b/package.json
@@ -13,16 +13,27 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
+    "express-jwt": "^8.4.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.0.1",
+    "mongoose": "^6.9.1",
     "next": "13.1.1",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.0",
+    "rxjs": "^7.8.0",
+    "services": "^0.0.3",
     "typescript": "4.9.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "web-push": "^3.5.0"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.0"
+    "@types/uuid": "^9.0.0",
+    "@types/web-push": "^3.3.2"
   }
 }
