--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "web-push": "^3.5.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/uuid": "^9.0.0",
     "@types/web-push": "^3.3.2"
   }
