--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.0",
+    "react-toastify": "^9.1.1",
     "rxjs": "^7.8.0",
     "services": "^0.0.3",
     "typescript": "4.9.4",
