landing and login-signup page is ready

--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
     "cors": "^2.8.5",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.0",
+    "mobx": "^6.8.0",
+    "mobx-logger": "^0.7.1",
+    "mobx-react-lite": "^3.4.0",
     "mongodb": "^5.0.1",
     "mongoose": "^6.9.1",
     "next": "13.1.1",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
-    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
     "rxjs": "^7.8.0",
+    "sass": "^1.58.0",
     "services": "^0.0.3",
     "typescript": "4.9.4",
     "uuid": "^9.0.0",
