--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@tiptap/extension-color": "^2.0.0-beta.217",
+    "@tiptap/extension-image": "^2.0.0-beta.217",
+    "@tiptap/extension-text-style": "^2.0.0-beta.217",
     "@tiptap/pm": "^2.0.0-beta.217",
     "@tiptap/react": "^2.0.0-beta.217",
     "@tiptap/starter-kit": "^2.0.0-beta.217",
