--- a/package.json
+++ b/package.json
@@ -8,14 +8,28 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "resolutions": {
+    "prosemirror-commands": "~1.2.1",
+    "prosemirror-keymap": "~1.1.5",
+    "prosemirror-model": "~1.16.1",
+    "prosemirror-schema-list": "~1.1.6",
+    "prosemirror-state": "~1.3.4",
+    "prosemirror-transform": "~1.3.3",
+    "prosemirror-view": "~1.23.6",
+    "@types/prosemirror-commands": "~1.0.4",
+    "@types/prosemirror-keymap": "~1.0.4",
+    "@types/prosemirror-model": "~1.16.0",
+    "@types/prosemirror-schema-list": "~1.0.3",
+    "@types/prosemirror-state": "~1.2.8",
+    "@types/prosemirror-transform": "~1.1.5",
+    "@types/prosemirror-view": "~1.23.1"
+  },
   "dependencies": {
     "@next/font": "13.1.1",
-    "@tiptap/extension-color": "^2.0.0-beta.217",
-    "@tiptap/extension-image": "^2.0.0-beta.217",
-    "@tiptap/extension-text-style": "^2.0.0-beta.217",
-    "@tiptap/pm": "^2.0.0-beta.217",
-    "@tiptap/react": "^2.0.0-beta.217",
-    "@tiptap/starter-kit": "^2.0.0-beta.217",
+    "@tiptap/extension-color": "^2.0.0-beta.219",
+    "@tiptap/pm": "^2.0.0-beta.218",
+    "@tiptap/react": "^2.0.0-beta.218",
+    "@tiptap/starter-kit": "^2.0.0-beta.218",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -32,6 +46,7 @@
     "next": "13.1.1",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
+    "react-devtools": "^4.27.2",
     "react-dom": "18.2.0",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
