menubar issue fixed

--- a/package.json
+++ b/package.json
@@ -26,7 +26,14 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@tiptap/extension-bold": "^2.0.0-beta.220",
+    "@tiptap/extension-bullet-list": "^2.0.0-beta.220",
+    "@tiptap/extension-code-block": "^2.0.0-beta.220",
     "@tiptap/extension-color": "^2.0.0-beta.219",
+    "@tiptap/extension-highlight": "^2.0.0-beta.220",
+    "@tiptap/extension-history": "^2.0.0-beta.220",
+    "@tiptap/extension-italic": "^2.0.0-beta.220",
+    "@tiptap/extension-list-item": "^2.0.0-beta.220",
     "@tiptap/pm": "^2.0.0-beta.218",
     "@tiptap/react": "^2.0.0-beta.218",
     "@tiptap/starter-kit": "^2.0.0-beta.218",
@@ -48,6 +55,7 @@
     "react": "18.2.0",
     "react-devtools": "^4.27.2",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
     "rxjs": "^7.8.0",
