--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "rxjs": "^7.8.0",
     "sass": "^1.58.0",
     "services": "^0.0.3",
+    "sharp": "^0.31.3",
     "typescript": "4.9.4",
     "uuid": "^9.0.0",
     "web-push": "^3.5.0"
