syncyng notes with server if you have an account

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/
+MONGODB_URI=mongodb+srv://abolfazgk:aEligb8Jxpbfg8of@cluster0.r0rw6ig.mongodb.net/?retryWrites=true&w=majority
