--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "@types/react-dom": "18.0.10",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
-    "cors": "^2.8.5",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.0",
     "mobx": "^6.8.0",
@@ -52,6 +51,7 @@
     "mongoose": "^6.9.1",
     "next": "13.1.1",
     "next-pwa": "^5.6.0",
+    "nextjs-cors": "^2.1.2",
     "react": "18.2.0",
     "react-devtools": "^4.27.2",
     "react-dom": "18.2.0",
