--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "theme_color": "#3544f6",
+  "theme_color": "#333",
   "background_color": "#f6b235",
   "display": "standalone",
   "scope": "/",
