--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://abolfazgk:aEligb8Jxpbfg8of@cluster0.r0rw6ig.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=degrjgniuwreghnrwg%^&%#&^%*#%^645756%^&
