--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-select": "^5.7.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "rxjs": "^7.8.0",
     "sass": "^1.58.0",
