--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "sharp": "^0.31.3",
     "typescript": "4.9.4",
     "uuid": "^9.0.0",
+    "virtual-keyboard-offset": "^1.0.10",
     "web-push": "^3.5.0"
   },
   "devDependencies": {
