--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/public/sw.js.*
+/public/sw.js
+
+/public/workbox-*.js
+/public/workbox-*.js.map
