Fix Login styles, Fox login service types

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://abolfazgk:aEligb8Jxpbfg8of@cluster0.r0rw6ig.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI="mongodb://localhost:27017"
 JWT_SECRET=degrjgniuwreghnrwg%^&%#&^%*#%^645756%^&
