--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bootstrap": "^5.2.3",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mobx": "^6.8.0",
     "mobx-logger": "^0.7.1",
     "mobx-react-lite": "^3.4.0",
@@ -54,6 +55,7 @@
     "nextjs-cors": "^2.1.2",
     "react": "18.2.0",
     "react-devtools": "^4.27.2",
+    "react-dialog-polyfill": "^1.1.7",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-select": "^5.7.0",
