--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI="mongodb://localhost:27017"
+MONGODB_URI="mongodb://localhost:27017/abolfazlNote"
 JWT_SECRET=degrjgniuwreghnrwg%^&%#&^%*#%^645756%^&
